z-index fix

--- a/src/styles/excerpts.sass
+++ b/src/styles/excerpts.sass
@@ -156,7 +156,7 @@ blockquote
     text-decoration: none
 
   &:hover
-    z-index: 999
+    z-index: 99
 
     .clone
       display: block
