--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -482,7 +482,7 @@ footer
   @include dropShadow
   background: $bg
   padding: 3rem
-  z-index: 99
+  z-index: 999
   justify-content: center
   align-items: center
   border: 1px solid $accent
